--- a/css/styles.css
+++ b/css/styles.css
@@ -69,9 +69,9 @@ body {
   color: var(--white-hero-text);
 }
 .hero .hero-btn {
-  font-family: Roboto, sans-serif;
+  /* font-family: Roboto, sans-serif;
+  font-size: 16px; */
   font-weight: 600;
-  font-size: 16px;
   line-height: 1.19;
   letter-spacing: 0.04em;
   color: var(--white-hero-text);
@@ -93,6 +93,8 @@ body {
 }
 button {
   cursor: pointer;
+  font-family: inherit;
+  font-size: inherit;
 }
 /* features section */
 .section-title {
@@ -155,10 +157,10 @@ footer {
   letter-spacing: 0.02em;
   color: #e7e9fc;
 }
-/*  */
+/* Portfolio */
 .site-filter .button {
-  font-family: Roboto, sans-serif;
-  font-size: 16px;
+  /* font-family: Roboto, sans-serif;
+  font-size: 16px; */
   font-weight: 600;
   text-align: center;
   line-height: 1.5;
